# ekirjasto-data-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  test-build.yaml  test.yaml
lib/: database.py  models.py  opensearch.py
tests/: database_testsetup.py  opensearch_testsetup.py  test_endpoints.py
