[tool.poetry]
name = "ekirjasto-data-api"
description = ""
authors = ["National Library of Finland"]
readme = "README.md"
packages = [{include = "ekirjasto_data_api"}]
version = "0"  # Version number is managed with tags in git

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
SQLAlchemy = "^2.0.29"
opensearch-py = "^2.5.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
